--- a/src/components/docs/TableOfContents.astro
+++ b/src/components/docs/TableOfContents.astro
@@ -9,7 +9,7 @@ const filteredHeadings = headings.filter((h) => h.depth === 2 || h.depth === 3);
 
 {
     filteredHeadings.length > 0 && (
-        <aside class="sticky top-17 hidden h-[calc(100vh-5.25rem)] overflow-y-auto bg-background xl:block border-border border rounded-lg">
+        <aside class="sticky top-17 hidden h-[calc(100vh-5.25rem)] overflow-y-auto bg-popover xl:block rounded-lg">
             <nav
                 aria-label="Table of contents"
                 class="flex h-full flex-col px-4 py-6"
