refactor(toc): enable conditional rendering of TOC extra

--- a/src/components/docs/TableOfContentsExtra.astro
+++ b/src/components/docs/TableOfContentsExtra.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section
+<!-- <section
     class="rounded-2xl bg-popover p-4 overflow-y-auto h-[calc((100vh-5.25rem)*0.33)]"
 >
     <div class="text-sm leading-relaxed">
@@ -11,4 +11,4 @@
             Bookmark this guide, open a new issue, or drop a note in the
         </p>
     </div>
-</section>
+</section> -->
