--- a/src/components/core/HeaderNav.astro
+++ b/src/components/core/HeaderNav.astro
@@ -1,9 +1,6 @@
 ---
-import { navItems } from "@data/config";
+import { HEADER_NAV_ITEMS } from "@data/config";
 import { HeaderNavClient } from "./HeaderNav.client";
-import type { HeaderNavProps } from "@/lib/types";
-
-const props = Astro.props as HeaderNavProps;
 ---
 
-<HeaderNavClient client:only="react" navItems={navItems} />
+<HeaderNavClient client:only="react" navItems={HEADER_NAV_ITEMS} />
