--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -43,10 +43,12 @@ const tableOfContentsHeadings = headings
         />
 
         <!-- Main content  -->
-        <main class="flex-1 px-8 py-6 min-w-0">
+        <main class="flex-1 lg:px-8 lg:py-6 min-w-0">
             <div class="flex items-center justify-between gap-4 mb-6">
-                <Breadcrumb items={breadcrumbItems} />
-                <SourceButton slug={currentSlug} />
+                <div class="hidden lg:flex justify-between w-full">
+                    <Breadcrumb items={breadcrumbItems} />
+                    <SourceButton slug={currentSlug} />
+                </div>
             </div>
             <article class="prose prose-slate dark:prose-invert min-w-0">
                 <slot />
