style(DocsLayout): align items in main content area

--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -45,7 +45,7 @@ const tableOfContentsHeadings = headings
         <!-- Main content  -->
         <main class="flex-1 lg:px-8 lg:py-6 min-w-0">
             <div class="flex items-center justify-between gap-4 mb-6">
-                <div class="hidden lg:flex justify-between w-full">
+                <div class="hidden lg:flex justify-between w-full items-center">
                     <Breadcrumb items={breadcrumbItems} />
                     <SourceButton slug={currentSlug} />
                 </div>
